# copilot

./: .gitignore  pyproject.toml
copilot/: app.py  constants.py  openai_.py  settings.py  utils.py
copilot/ai/: assistant_event_handler.py  llama_index_.py  openai_.py
copilot/ai/openai_/: __init__.py  clients.py  function_calling.py
copilot/ai/tools/: __init__.py  csv_df_qa.py  pdf_qa.py
copilot/resources/: __init__.py
tests/: test_assistant.py
tests/ai/openai_/: test_function_calling.py
