[tool.poetry]
name = "copilot"
version = "0.1.0"
description = ""
authors = ["Aditya Gudimella <aditya.gudimella@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.52.2"
chainlit = "^1.3.1"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
